<resources>
    <string name="app_name">BrainQuiz</string>
    <string name="sub_title">Measure your brain abilities</string>
    <string name="math_riddles">Math Riddles</string>
    <string name="what_was_the_number">What was the number?</string>
    <string name="submit">Submit</string>
    <string name="start_new">Start a new game</string>
    <string name="continue_btn">Continue from the last point</string>
    <string name="visual_memory">Visual Memory</string>
    <string name="number_memory">Number Memory</string>
    <string name="try_again">Try Again</string>
    <string name="save_record">Save Score</string>
    <string name="number">number displayed was:</string>
    <string name="your_ans">Your answer was:</string>
    <string name="advice_to_save">Save your record to see how you compare</string>
    <string name="level">Level</string>
    <string name="finish">Finish</string>
    <string name="name_col">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="time">Time</string>
    <string name="strikes">Number of srikes:</string>
    <string name="Record">Record</string>
    <string name="continue_visual_memory">Counitue</string>
    <string name="exists">username already exsists!</string>
    <string name="well_done">Well done! You finshed all levels</string>
    <string name="home">Home</string>
    <string name="username">Enter name</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="right_ans">The right answer was:</string>
    <string name="answer">Answer</string>
    <string name="your_score">Your Score</string>
    <string name="enter_btn">Enter</string>
    <string name="score">Score</string>
    <string name="new_game">New game</string>
    <string name="explanation">Remember the positions of the digits on screen and press on them in order</string>
    <string name="quit_game">Exit Game</string>
    <string name="you_sure">Are you sure, you want to exit?</string>
    <string name="yes_get_out">yes, get out</string>
    <string name="stay">stay</string>
    <string name="got_it">Got it!</string>
    <string name="go">Go</string>
    <string name="remember_num">Remember the number on the screen in a limited time</string>
    <string name="strikes_left">Number of attempts left:</string>
    <string name="accuracy">Accuracy</string>
    <string name="reaction_time">Reaction Time</string>
    <string name="your_progress">Your Progress</string>
    <string name="color_match">Color Match</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="longest_run">Longest Run</string>
    <string name="next">Next</string>
    <string name="longest_number">Longest Number</string>
    <string name="longest_seq">Longest Sequence</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="text">Text</string>
    <string name="color">Color</string>
    <string name="black">Black</string>
    <string name="score_saved">Your result has been saved</string>
</resources>