<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/full_screen_gradient"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/right_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/your_ans"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.example.brainquiz.LineTextView
        android:id="@+id/wrong_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/level_tv"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advice_to_save"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/save_score_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/submit_btn_style"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/save_record"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/try_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/submit_btn_style"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>