<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_500"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/well_done"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advice_to_save"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/save_score_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/submit_btn_style"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/save_record"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/try_again_btn"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>


        <ImageView
            android:alpha="0.78"
            android:layout_marginTop="20dp"
            android:src="@drawable/mind"
            android:id="@+id/dish_image"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

</LinearLayout>