<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/digits_back_wall"
    tools:context=".activities.DigitsMemoryAnswerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:fontFamily="@font/varela_round_regular" />

        <TextView
            android:id="@+id/tv_number_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textSize="32sp"
            android:fontFamily="@font/varela_round_regular"
            android:text="76"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:layout_gravity="center"
            android:textColor="@color/orange_light"
            android:textSize="32sp"
            android:fontFamily="@font/varela_round_regular" />

        <TextView
            android:id="@+id/tv_number_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textSize="32sp"
            android:textColor="@color/orange_light"
            android:fontFamily="@font/varela_round_regular"
            android:text="89"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:fontFamily="@font/varela_round_regular"/>
            <TextView
                android:id="@+id/v_current_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:fontFamily="@font/varela_round_regular"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:text="@string/next"
            android:padding="18dp"
            android:textColor="@color/white"
            android:fontFamily="@font/varela_round_regular"
            android:textAllCaps="false"
            android:background="@drawable/button_round"
            android:layout_margin="25dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>