<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="440dp"
        android:layout_centerInParent="true"
        >

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_dialog">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="18dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/hard_grey"
                    android:fontFamily="@font/varela_round_regular"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/your_score"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round_regular"
                    android:id="@+id/tv_score"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/hard_grey"
                    android:text="56"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/varela_round_regular"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:textColor="@color/hard_grey"
                    android:textColorHint="@color/hard_grey"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/username" />
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/hard_grey"
                    android:textSize="21sp"
                    android:text="staviuss"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button_color_match"
                    android:fontFamily="@font/varela_round_regular"
                    android:text="@string/save_record"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginTop="30dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_error"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/red"
                    android:gravity="center"
                    />
            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/score_logo"/>

    </RelativeLayout>

</RelativeLayout>


